@@ -2,4 +2,4 @@
 
 void gtkrc_get_details (gchar *filename, GSList **engines, GSList **symbolic_colors);
 gchar * gtkrc_find_named (const gchar *name);
-
+gchar * gtkrc_get_color_scheme (gchar *filename);
