@@ -1,3 +1,10 @@
+2007-03-04  Thomas Wood  <thos@gnome.org>
+
+	* Makefile.am:
+	* gtkrc-utils.c:
+	* gtkrc-utils.h:
+	Move gtkrc-utils into capplets/common
+
 2007-02-28  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-details.c: (load_theme_names): Replace a deprecated function
